--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limiter": "^1.3.1",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.2",
+    "resend": "^6.8.0",
     "validator": "^13.15.26"
   }
 }
